<resources>
    <string name="app_name">Dome</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_and_more">Refresh&amp;More</string>
    <string name="header_and_footer">Header&amp;Footer</string>
    <string name="multi_style">MultiType</string>
    <string name="collapsing">Collapsing</string>
    <string name="staggered_grid">StaggeredGrid</string>
    <string name="horizontal">Horizontal</string>
    <string name="stiky_header">StickyHeader</string>
    <string name="insert">Insert</string>
</resources>
