<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/refresh_and_more"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/refresh_and_more"/>
    <Button
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/insert"/>
    <Button
        android:id="@+id/header_footer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/header_and_footer"/>
    <Button
        android:id="@+id/multi_style"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/multi_style"/>
    <Button
        android:id="@+id/collapsing"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/collapsing"/>
    <Button
        android:id="@+id/staggered_grid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/staggered_grid"/>
    <Button
        android:id="@+id/horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/horizontal"/> <Button
        android:id="@+id/stiky_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/stiky_header"/>
</LinearLayout>